--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,9 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginStart="30dp"
-    android:layout_marginEnd="30dp"
-    tools:context=".LoginActivity">
+    android:layout_marginStart="0dp"
+    android:layout_marginEnd="0dp"
+    tools:context=".LoginActivity"
+    >
+
 
 
     <TextView
@@ -39,7 +41,7 @@
 
         <EditText
             android:id="@+id/edUsername"
-            android:layout_width="273dp"
+            android:layout_width="279dp"
             android:layout_height="wrap_content"
             android:inputType="textPersonName" />
 
@@ -77,7 +79,6 @@
         android:layout_margin="30dp"
         android:layout_marginTop="28dp"
         android:text="login"
-        android:textColor="#fff"
         app:layout_constraintTop_toBottomOf="@+id/tvPassword"
         tools:layout_editor_absoluteX="30dp" />
 
@@ -88,10 +89,10 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="2dp"
         android:text="signup"
-        app:layout_constraintTop_toBottomOf="@id/loginBtn"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="30dp"
-        tools:layout_editor_absoluteY="414dp" />
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/loginBtn" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
